--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,35 @@ canvas {
   background: #f9f7f7 url("icons/eraser.png") center / contain no-repeat;
 }
 
+#size {
+  width: 1em;
+  text-align: center;
+}
+
 #sizing {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 1.5em;
+}
+
+#range:focus {
+  outline: none;
+}
+
+@media screen and (max-width: 800px) {
+  #sizing {
+    position: fixed;
+    bottom: 0px;
+    right: 10px;
+    border-radius: 8px;
+    z-index: 2;
+  }
+
+  #range {
+    height: 20%;
+    width: 20%;
+  }
 }
 
 #bottom {
@@ -200,6 +224,10 @@ canvas {
 
 #b-decompose {
   width: 120px;
+}
+
+#paste {
+  background: #f9f7f7 url("icons/paste.png") center / contain no-repeat;
 }
 
 #status {
