--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,12 @@ body {
   margin-top: 1em;
   width: 806px;
   margin: 1em auto 0;
+  user-select: none;
+  overflow: auto;
 }
 
 #title {
-  font-size: 1.25em;
+  font-size: 1.5em;
   align-self: start;
 }
 
@@ -16,7 +18,8 @@ body {
 }
 
 canvas {
-  border: 3px solid black;
+  border: 3px solid #000000;
+  border-radius: 3px;
   image-rendering: pixelated;
   cursor: url("icons/pencil.png") 3 29, auto;
 }
@@ -107,18 +110,22 @@ canvas {
 }
 
 #bottom {
+  position: relative;
   margin: auto 0 0.5em;
 }
 
 #confirm {
   display: none;
   position: absolute;
-  top: 685px;
+  z-index: 2;
+  bottom: 40px;
+  right: 0px;
   width: 150px;
   height: 100px;
   background-color: #f0f5f9;
   flex-direction: column;
   align-items: center;
+  border: solid 2px #393e46;
   border-radius: 3px;
 }
 
@@ -151,18 +158,29 @@ canvas {
 }
 
 #trash {
+  position: relative;
   background: #f9f7f7 url("icons/bin.png") center / contain no-repeat;
 }
 
 #end {
   display: flex;
   align-items: center;
-  justify-content: end;
   width: 806px;
 }
 
-#end > span {
-  user-select: none;
+#actions {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  margin: 0 165px 0 373px;
+}
+
+#undo {
+  background: #f9f7f7 url("icons/undo.png") center / contain no-repeat;
+}
+
+#redo {
+  background: #f9f7f7 url("icons/redo.png") center / contain no-repeat;
 }
 
 #compose {
@@ -190,7 +208,7 @@ canvas {
   height: 475px;
   width: 600px;
   background-color: #f6f6f6;
-  border: #dbe2ef solid 2px;
+  border: solid 2px #393e46;
   border-radius: 5px;
   gap: 5px;
 }
@@ -200,7 +218,6 @@ canvas {
   font-size: 1.5em;
   align-self: flex-end;
   margin-right: 10px;
-  user-select: none;
   color: #393e46;
 }
 
